GNOME Bugzilla – Bug 772277
Wrong sorting of bookmarks
Last modified: 2016-10-03 15:45:11 UTC
Created attachment 336717 [details] Screenshot Numbered bookmarks are incorrectly sorted. Please see the screenshot.
Created attachment 336722 [details] [review] shell: Sort bookmarks by page number instead of title Bookmarks shouldn't be sorted by their titles but their page numbers. Often titles don't have any sorting text, causing strcmp to wrongly sort them alphanumerically, just like in the bug referenced below.
Unless we want to sort the bookmarks alphabetically instead, in that case, we should go for something like Bug 770695, with natural sorting.
Comment on attachment 336722 [details] [review] shell: Sort bookmarks by page number instead of title It makes sense, thanks!
Attachment 336722 [details] pushed as fa19890 - shell: Sort bookmarks by page number instead of title