shell: Sort bookmarks by page number instead of title

Bookmarks shouldn't be sorted by their titles but their page
numbers. Often titles don't have any sorting text, causing
strcmp to wrongly sort them alphanumerically, just like in the
bug referenced below.

https://bugzilla.gnome.org/show_bug.cgi?id=772277